# stock_dashboard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
app/: app.py
app/api/routes/: api.py  dashboard.py  stocks.py  websockets.py
app/core/: config.py  database.py
app/models/: stock.py
app/services/: db_service.py  scheduler_service.py  stock_service.py  websocket_service.py
app/static/css/: styles.css
app/static/js/: dashboard.js  main.js  stock-detail.js
app/templates/: base.html  dashboard.html  stock_detail.html
scripts/: db_util.py
