[project]
name = "stock-dashboard"
version = "0.1.0"
description = "Interactive Stock Dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.2",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.5",
    "websockets>=11.0.3",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10.0"
]
